@@ -2,25 +2,25 @@
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-requires lock_screen_dialog 1.0 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <object class="LockScreenDialog" id="lock_screen_dialog">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
     <property name="icon">../media/pasaffe.svg</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
-      <object class="GtkBox" id="dialog-vbox1">
+      <object class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child internal-child="action_area">
-          <object class="GtkButtonBox" id="dialog-action_area1">
+          <object class="GtkHButtonBox" id="dialog-action_area1">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="btn_quit">
-                <property name="label">gtk-quit</property>
+                <property name="label">gtk-cancel</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
@@ -119,6 +119,8 @@ Please enter your master password:&lt;/b&gt;&lt;/big&gt;</property>
                     <property name="activates_default">True</property>
                     <property name="primary_icon_activatable">False</property>
                     <property name="secondary_icon_activatable">False</property>
+                    <property name="primary_icon_sensitive">True</property>
+                    <property name="secondary_icon_sensitive">True</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
